<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/tv_change_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:text="@string/change_usename"
        android:textColor="@color/write"
        android:textSize="@dimen/title" />

    <EditText
        android:inputType="number"
        android:id="@+id/et_change_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/right_content_margin"
        android:background="@drawable/shop_shape_bg_filter"
        android:hint="@string/usename"
        android:paddingLeft="@dimen/itemize_margin"
        android:textColor="@color/write"
        android:textColorHint="@color/write" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_change_get_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/itemize_margin"
            android:layout_weight="2"
            android:background="@drawable/shop_shape_bg_filter"
            android:gravity="center"
            android:text="@string/get_code"
            android:textColor="@color/write"
            android:textColorHint="@color/write"
            android:visibility="gone" />

        <EditText
            android:inputType="number"
            android:id="@+id/et_change_input_code"
            android:layout_width="0dp"
            android:layout_height="@dimen/title_margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/itemize_margin"
            android:layout_weight="3"
            android:background="@drawable/shop_shape_bg_filter"
            android:gravity="center"
            android:hint=""
            android:textColor="@color/write"
            android:textColorHint="@color/write"
            android:visibility="gone" />

    </LinearLayout>

    <EditText
        android:inputType="number"
        android:id="@+id/et_change_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_margin"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="@dimen/itemize_margin"
        android:background="@drawable/shop_shape_bg_filter"
        android:hint="@string/new_pwd"
        android:paddingLeft="@dimen/itemize_margin"
        android:textColor="@color/write"
        android:textColorHint="@color/write" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_change_submit"
        android:layout_width="120dp"
        android:layout_height="@dimen/small_list_item_margin"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/small_list_item_margin"
        android:background="@drawable/shop_shape_bg_filter"
        android:padding="@dimen/itemize_margin"
        android:text="@string/submit"
        android:textColor="@color/write" />

</LinearLayout>