<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/title_margin"
        android:layout_marginTop="@dimen/title_margin"
        android:drawableLeft="@mipmap/ic_logo"
        android:text="@string/user_login"
        android:textColor="@color/write"
        android:textSize="@dimen/title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/title_margin"
        android:layout_marginLeft="@dimen/title_margin"
        android:layout_marginTop="@dimen/itemize_margin"
        android:text="@string/welcome_to_our"
        android:textColor="@color/write"
        android:textSize="@dimen/body" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_bg2"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/login_shape_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/margin">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_usename" />

                <EditText
                    android:text="13232650766"
                    android:id="@+id/et_login_usename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/input_phone_or_email"
                    android:padding="@dimen/margin"
                    android:textColor="@color/write"
                    android:textColorHint="@color/write" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/app_bg2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/margin">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/ic_password" />

                <EditText
                    android:text="123"
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/input_pwd"
                    android:inputType="numberPassword"
                    android:padding="@dimen/margin"
                    android:textColor="@color/write"
                    android:textColorHint="@color/write" />
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_margin"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/home_shape_bg_filter"
            android:src="@drawable/ic_arrow_forward_black_24dp" />

        <LinearLayout
            android:layout_margin="@dimen/margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_login_register"
                android:padding="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/title_margin"
                android:layout_marginLeft="@dimen/title_margin"

                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/body" />

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/title_margin"
                android:layout_marginLeft="@dimen/title_margin"
                android:layout_marginTop="@dimen/itemize_margin"
                android:textColor="@color/write"
                android:textSize="@dimen/body" />

            <TextView
                android:id="@+id/tv_login_forget"
                android:padding="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/title_margin"
                android:text="@string/forget_pwd"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/body" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>